style.css
/* ... */
.listento {
    font-size: 64px;
    font-weight: 800;
    line-height: 78px;
    text-align: center;
    color: #303030;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    margin-top: 88px;
}

.platform {
    color: #464b4f;
    font-size: 25px;
    font-weight: 800;
    line-height: 34px;
    text-align: center;
    max-width: 1110px;
    margin: 20px 0 0 0;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    font-family: 'Inconsolata', monospace;
}

.steve {
    margin: -15px 175px 0px 175px;
}

.clippaths {
    clip-path: polygon(0.25% 77px, 71.75% 0.42%, 50% 100%, 168px 92.50%);
    shape-outside: polygon(-1.75% 18px, 81.45% -10.68%, 57.10% 99.55%, 168px 92.5%);
    width: 1000px;
    float: left;
}

.aboutvoid {
    color: #464b4f;
    font-size: 25px;
    font-weight: 800;
    line-height: 34px;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    font-family: 'Inconsolata', monospace;
}

.aboutvoid p {
    padding: 55px 0 80px;
}

.Featured {
    font-size: 35px;
    font-weight: 800;
    line-height: 78px;
    color: #303030;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    margin-top: 88px;
    margin: 100px 175px 0px 175px;
    display: flex;
    flex-direction: column;
}

.checkout {
    color: #464b4f;
    font-size: 25px;
    font-weight: 800;
    line-height: 34px;
    margin: 20px 0;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    font-family: 'Inconsolata', monospace;
}


.container1 {
    margin: 0px 175px 0px 175px;
    width: 35%;
    float: left;
    clip-path: polygon(-0.04% -1px, 100.18% 0.62%, 100.04% 100%, 0px 99.38%);
    shape-outside: polygon(-0.04% -1px, 100.18% 0.62%, 100.04% 100%, 0px 99.38%);
    font-family: 'Kanit', sans-serif;
}

.container2 {
    margin: 25px 0px 0px 0px;
    font-family: 'Kanit', sans-serif;

}

.songitem {
    height: 50px;
    display: flex;
    border-radius: 34px;
    width: 500px;
    margin: 12px;
    cursor: pointer;
    flex-direction: row;
}

.songitem img {
    width: 57px;
    margin: 0 23px;
    border-radius: 34px;
}

.songname {
    font-size: large;
}

.timestamp {
    margin: 0 23px;
}

.highest {
    margin-top: 130px;
    background-image: url(ss.jpg);
    display: flex;
    background-position: bottom right;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    opacity: 150%;
}

.streaming {
    color: #8bed4f;
    font-size: 70px;
    font-weight: 900;
    line-height: 100px;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    margin: 80px 175px 0px 175px;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
}

.streamings {
    color: #8bed4f;
    font-size: 70px;
    font-weight: 900;
    line-height: 100px;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    margin: 0px 175px 0px 175px;
}

.listen {
    transition: all 0.75s ease-in-out;
    display: inline-flex;
    align-items: center;
    height: 68px;
    background: linear-gradient(267.49deg, rgba(100, 206, 19, 0.4), rgba(91, 35, 225, .25));
    border: 2px solid white;
    border-radius: 5px;
    color: white;
    padding: 16px 40px;
    font-size: 20px;
    font-weight: 600;
    letter-spacing: .2px;
    text-align: center;
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
    cursor: pointer;
    width: 210px;
    margin: 25px 175px 88px 175px;
    text-align: center;
    font-family: Gilroy !important;


    text-decoration: none;

}

.signupdetailss:hover,
:focus,
:active {
    text-decoration: none;
    color: inherit;

}

.listen:hover {
    padding: 24px;
}

.quote {
    background-color: #d4ffe8;
    padding: 200px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.Featured {
    font-size: 35px;
    font-weight: 800;
    line-height: 78px;
    color: #303030;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    margin-top: 88px;
    margin: 100px 175px 0px 175px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.Featuredaa {
    font-size: 35px;
    font-weight: 800;
    line-height: 78px;
    color: #464b4f;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    margin-top: 88px;
    margin: 100px 175px 0px 175px;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: 'Inconsolata', monospace;
}

.Featureda {
    font-size: 35px;
    font-weight: 800;
    color: #464b4f;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    align-items: center;
    margin: 0px 175px 0px 175px;
    display: flex;
    font-family: 'Inconsolata', monospace;
}

.Featuredb {
    font-size: 35px;
    font-weight: 800;
    color: #464b4f;
    text-shadow: 0 5px 20px rgb(25 0 96 / 50%);
    justify-content: center;
    margin: 25px 175px 0px 175px;
    display: flex;
    font-family: 'Inconsolata', monospace;
}

.signupdetail {
    margin: 140px 0px;
    background-image: url(streetsinger.jpg);
    display: flex;
    background-position: bottom right;
    background-repeat: no-repeat;
    flex-direction: column;
    width: 99.97vw;
}

.gennext {
    width: 80px;
    margin-top: 100px;
    margin-left: 200px;
    cursor: pointer;
    z-index: 2;
    position: relative;
    right: -49px;
}

.void {
    cursor: pointer;
    font-size: 35px;
    font-weight: 800;
    color: #8bed4f;
    /* text-shadow: 5px 5px 50px rgb(25 0 96 / 50%); */
    position: relative;
    top: -16px;
    right: -39px;
    font-family: 'Kanit', sans-serif;
}

.twitter {
    position: relative;
    top: 38px;
    left: -55px;
    color: #464b4f;
    cursor: pointer;
    z-index: 2;
}

.medium {
    position: relative;
    top: 77px;
    left: -87px;
    color: #464b4f;
    cursor: pointer;
    z-index: 1;

}

.list {
    display: flex;
    right: 45px;
    bottom: 50px;
    position: relative;
    list-style: none;
    margin: 35px 0px;
}
/* ... */

